Fixes bug with titles not showing for text and column slides. Some text styling for column slide.

--- a/app/styles/slide.scss
+++ b/app/styles/slide.scss
@@ -58,13 +58,16 @@
 .slide-column {
 	background:#ccc;
 	color:#000;
-	font-size:24px;
+	font-size:20px;
 	height:auto;
 	position:relative;
+	text-align:left;
+	
+	img {width:100%;}
 }
 .slide-column-container {
-	width:60%;
-	margin-left:20%;
+	width:50%;
+	margin-left:25%;
 	padding:100px 0;
 	position:relative;
 }
